--- a/style.css
+++ b/style.css
@@ -398,13 +398,15 @@ iframe{
         color: #171610;
     }
     .tittle-banner h1{
-        font-weight: 500;
-        font-size: 2rem;
+        font-weight: 600;
+        font-size: 1.7rem;
         margin-bottom: 10px;
+        text-transform: uppercase;
     }
     .tittle-banner p{
         font-size: 1rem;
-        font-weight: 400;
+        font-weight: 500;
+        text-transform: uppercase;
     }
     /*NOSOTROS*/
     #nosotros{
