--- a/style.css
+++ b/style.css
@@ -101,6 +101,36 @@ header{
 .tittle-banner h1{
     font-weight: 500;
 }
+.ws-button {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 999;
+
+    height: 60px;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #58bf50;
+    color: #ffffff;
+    border: none;
+    padding: 15px;
+    border-radius: 100%;
+    cursor: pointer;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s, transform 0.3s;
+}
+.ws-button:hover {
+    background-color: #43943d;;
+    transform: scale(1.1);
+}
+.ws-button i{
+    font-size: 40px;
+    color: #f4f4ee;
+}
+
 /*GENERAL SECCION*/
 html {
     scroll-behavior: smooth;
@@ -263,6 +293,11 @@ iframe{
 }
 .red:hover{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    background-color: #021f23;
+    transform: scale(1.1);
+}
+.red:hover i{
+    color: #ccc;
 }
 .formulario{
     display: flex;
@@ -313,6 +348,8 @@ iframe{
     width: 150px;
     border: none;
     background-color: #04363d;
+    transition: background-color 0.3s, transform 0.3s;
+    cursor: pointer;
 
     display: flex;
     text-align: center;
@@ -323,8 +360,8 @@ iframe{
     margin-bottom: 20px;
 }
 .button:hover{
-    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
-    cursor: pointer;
+    background-color: #021f23;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
 #button{
     border: none;
